# pySigma-backend-sqlite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/sqlite/: __init__.py  sqlite.py
tests/: test_backend_sqlite.py
