[tool.poetry]
name = "pySigma-backend-sqlite"
version = "0.1.2"
description = "pySigma sqlite backend"
readme = "README.md"
authors = ["wagga"]
license = "LGPL-3.0-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-sqlite"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
pytest = "^8.0"
pytest-cov = "^4.1"
coverage = "^7.4"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = ["sigma"]
[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "wagga", email = "wagga"},
]
license = {text = "LGPL-3.0-only"}
requires-python = ">=3.8,<4.0"
dependencies = [
    "pysigma>=0.11",
]
name = "pySigma-backend-sqlite"
version = "0.1.2"
description = "pySigma sqlite backend"

[project.urls]
repository = "https://github.com/SigmaHQ/pySigma-backend-sqlite"

[project.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
coverage = "^7.4"
